; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/lua/src/extr_luac.c_usage.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/lua/src/extr_luac.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"%s: unrecognized option '%s'\0A\00", align 1
@progname = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [8 x i8] c"%s: %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [329 x i8] c"usage: %s [options] [filenames]\0AAvailable options are:\0A  -l       list (use -l -l for full listing)\0A  -o name  output to file 'name' (default is \22%s\22)\0A  -p       parse only\0A  -s       strip debug information\0A  -v       show version information\0A  --       stop handling options\0A  -        stop handling options and process stdin\0A\00", align 1
@Output = common dso_local global i8* null, align 8
@EXIT_FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  %6 = icmp eq i32 %5, 45
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @stderr, align 4
  %9 = load i8*, i8** @progname, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @fprintf(i32 %8, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %9, i8* %10)
  br label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @stderr, align 4
  %14 = load i8*, i8** @progname, align 8
  %15 = load i8*, i8** %2, align 8
  %16 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %14, i8* %15)
  br label %17

17:                                               ; preds = %12, %7
  %18 = load i32, i32* @stderr, align 4
  %19 = load i8*, i8** @progname, align 8
  %20 = load i8*, i8** @Output, align 8
  %21 = call i32 @fprintf(i32 %18, i8* getelementptr inbounds ([329 x i8], [329 x i8]* @.str.2, i64 0, i64 0), i8* %19, i8* %20)
  %22 = load i32, i32* @EXIT_FAILURE, align 4
  %23 = call i32 @exit(i32 %22) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
